--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
               <div class="card feature-card">
 
                 <figure class="card-banner img-holder" style="--width: 1602; --height: 903;">
-                  <img src="./assets/images/featured-2.jpeg" width="1602" height="903" loading="lazy"
+                  <img src="./assets/images/madhuri.jpg" width="1602" height="903" loading="lazy"
                     alt="Self-observation is the first step of inner unfolding" class="img-cover">
                 </figure>
 
