--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             <a href="#" class="navbar-link hover-1" data-nav-toggler>Contact</a>
           </li>
 
+      </nav>
+
         </ul>
 
         
